Upgrade Landing Page and add some section

--- a/templates/dashboard/donor.html
+++ b/templates/dashboard/donor.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Donor Dashboard - SmartFood{% endblock %}
+{% block title %}Donor Dashboard - HungerFree{% endblock %}
 
 {% block content %}
     <h2>Welcome back, {{ user.first_name|default:user.username }}! (Donor)</h2>
