--- a/templates/dashboard/receiver.html
+++ b/templates/dashboard/receiver.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Receiver Dashboard - SmartFood{% endblock %}
+{% block title %}Receiver Dashboard - HungerFree{% endblock %}
 
 {% block content %}
     <h2>Welcome back, {{ user.first_name|default:user.username }}!</h2>
