--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login - SmartFood</title>
+    <title>Login - HungerFree</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* (Use the same styles as signup.html) */
