--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up - SmartFood</title>
+    <title>Sign Up - HungerFree</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* (Use the Auth Page styles from your first HTML mockup) */
