--- a/templates/dashboard/volunteer.html
+++ b/templates/dashboard/volunteer.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Volunteer Dashboard - SmartFood{% endblock %}
+{% block title %}Volunteer Dashboard - HungerFree{% endblock %}
 
 {% block content %}
     <h2>Welcome back, {{ user.first_name|default:user.username }}!</h2>
